--- a/website/content/en/status/report-2024-10-2024-12/xfce.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/xfce.adoc
@@ -15,6 +15,6 @@ This new release adds many stability improvements and some new functionality.
 
 Upstream work for this release was focused on getting the code base ready for Wayland support.
 
-This release brings experimental Wayland support, although not all components have been migrated, so YMMV
+This release brings experimental Wayland support, although not all components have been migrated, so it may not work for you.
 
 For further details, refer to the link:https://xfce.org/about/news/?post=1734220800[Xfce 4.20 Upstream Release Announcement].
