--- a/website/content/en/status/report-2024-10-2024-12/pot.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pot.adoc
@@ -10,9 +10,9 @@ Contact: Michael Gmelin (Potman) <grembo@FreeBSD.org>
 Pot is a jail management tool that link:https://www.freebsd.org/news/status/report-2020-01-2020-03/#pot-and-the-nomad-pot-driver[also supports orchestration through Nomad].
 Potluck aims to be to FreeBSD and Pot what Dockerhub is to Linux and Docker: a repository of Pot flavours and complete container images for usage with Pot and in many cases Nomad.
 
-During this quarter, there was a new link:https://github.com/bsdpot/pot[Pot] release. It contains mainly bug fixes.
+During this quarter, there was no new link:https://github.com/bsdpot/pot[Pot] release. The tool is stable and used in production for quite some time already.
 
-While there were no new Potluck images being added this quarter, all images have been rebuilt several times for FreeBSD 14.1, security fixes and then again for 14.2 as well as for the new quarterly packages. 
+Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/netbox[Netbox] image. Additionally, all images have been rebuilt several times: For FreeBSD 14.1, to include security fixes, then again for 14.2 and last not least for the new quarterly packages. 
 
 Additionally, various images have received improvements and bug fixes, e.g. improving their syslog-ng integration.
 
