--- a/website/content/en/status/report-2024-10-2024-12/pot.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pot.adoc
@@ -12,9 +12,10 @@ Potluck aims to be to FreeBSD and Pot what Dockerhub is to Linux and Docker: a r
 
 During this quarter, there was no new link:https://github.com/bsdpot/pot[Pot] release. The tool is stable and used in production for quite some time already.
 
-Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/netbox[Netbox] image. Additionally, all images have been rebuilt several times: For FreeBSD 14.1, to include security fixes, then again for 14.2 and last not least for the new quarterly packages. 
-
+Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/netbox[Netbox] image.
 Additionally, various images have received improvements and bug fixes, e.g. improving their syslog-ng integration.
+
+Last not least, all images have been rebuilt several times: For FreeBSD 14.1, to include security fixes, then again for 14.2 and also for the new quarterly packages.
 
 As always, feedback and patches are welcome.
 
