Arch Handbook - driver basics: Minor tweaks
Reviewed by:	emaste@, carlavilla@, Pau Amma<pauamma@gundo.com>
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/417

--- a/documentation/content/en/books/arch-handbook/driverbasics/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/driverbasics/_index.adoc
@@ -343,4 +343,4 @@ For this reason, no serious applications rely on block devices, and in fact, alm
 
 Drivers for network devices do not use device nodes in order to be accessed. Their selection is based on other decisions made inside the kernel and instead of calling open(), use of a network device is generally introduced by using the system call socket(2).
 
-For more information see ifnet(9), the source of the loopback device, and Bill Paul's network drivers.
+For more information see ifnet(9), the source of the loopback device.
