--- a/website/content/en/status/report-2024-10-2024-12/pot.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pot.adoc
@@ -10,7 +10,8 @@ Contact: Michael Gmelin (Potman) <grembo@FreeBSD.org>
 Pot is a jail management tool that link:https://www.freebsd.org/news/status/report-2020-01-2020-03/#pot-and-the-nomad-pot-driver[also supports orchestration through Nomad].
 Potluck aims to be to FreeBSD and Pot what Dockerhub is to Linux and Docker: a repository of Pot flavours and complete container images for usage with Pot and in many cases Nomad.
 
-During this quarter, there was no new link:https://github.com/bsdpot/pot[Pot] release. The tool is stable and used in production for quite some time already.
+During this quarter, there was no new link:https://github.com/bsdpot/pot[Pot] release.
+The tool is stable and used in production for quite some time already.
 
 Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/netbox[Netbox] image.
 Additionally, various images have received improvements and bug fixes, e.g. improving their syslog-ng integration.
