--- a/website/content/en/status/report-2024-10-2024-12/pinephone.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pinephone.adoc
@@ -14,7 +14,10 @@ In this quarter:
 * A driver for the RK818 battery charger and battery monitor was written to allow the battery to be charged via USB, and to retrieve some battery information like voltage and charging status via sysctl.
 * The code repository has been updated with scripts and documentation on how to compile the custom kernel and device tree, and patch a FreeBSD 15-CURRENT image with them so that it boots on the Pinephone Pro.
 
-The next steps are to enable UEFI-based framebuffer support to enable output to the screen, and to enable USB on-the-go functionality, which might allow for plugging in a USB keyboard and/or ethernet. Porting the Linux driver for WiFi will also be looked into. Any developers wanting to assist are encouraged to get in touch. Additional feedback and testers are welcome. 
+The next steps are to enable UEFI-based framebuffer support to enable output to the screen, and to enable USB on-the-go functionality, which might allow for plugging in a USB keyboard and/or Ethernet.
+Porting the Linux driver for WiFi will also be looked into.
+Any developers wanting to assist are encouraged to get in touch.
+Additional feedback and testers are welcome. 
 
 Also see link:https://forums.freebsd.org/threads/porting-freebsd-to-pinephone-pro-help-needed.95948/[this thread on the FreeBSD Forum if you want to participate.]
 
