--- a/website/content/en/status/report-2024-10-2024-12/pot.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pot.adoc
@@ -16,7 +16,7 @@ The tool is stable and used in production for quite some time already.
 Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/netbox[Netbox] image.
 Additionally, various images have received improvements and bug fixes, e.g. improving their syslog-ng integration.
 
-Last not least, all images have been rebuilt several times: For FreeBSD 14.1, to include security fixes, then again for 14.2 and also for the new quarterly packages.
+Last not least, all images have been rebuilt several times: for FreeBSD 14.1, to include security fixes, then again for 14.2 and also for the new quarterly packages.
 
 As always, feedback and patches are welcome.
 
