--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -372,7 +372,7 @@ To start Hikari, use the following command:
 
 [NOTE]
 ====
-Make sure you have installed needed drivers for your GPU. otherwise it would give error "0 GPU detected".
+Make sure you have read this section 'How to Identify and Configure Drivers for Your Graphics Hardware'. otherwise it would give error "0 GPU detected".
 ====
 
 The Sway compositor is a tiling compositor that attempts to replace the i3 windows manager.
