--- a/documentation/content/pt-br/books/fdp-primer/editor-config/_index.po
+++ b/documentation/content/pt-br/books/fdp-primer/editor-config/_index.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-09-14 14:59-0300\n"
-"PO-Revision-Date: 2024-09-14 23:21+0000\n"
+"POT-Creation-Date: 2024-12-29 08:29-0500\n"
+"PO-Revision-Date: 2024-12-29 21:29+0000\n"
 "Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/booksfdp-primereditor-config_index/pt_BR/>\n"
@@ -56,16 +56,16 @@ msgstr "Vim"
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:57
 msgid ""
 "Install from package:editors/vim[], then follow the configuration "
-"instructions in crossref:editor-config[editor-config-vim-config].  More "
-"advanced users can use a proper linter like link:https://github.com/dense-"
-"analysis/ale[Ale] which can also act as a Vim link:https://langserver.org/"
-"[Language Server Protocol] client."
+"instructions in crossref:editor-config[editor-config-vim-config, "
+"Configuration].  More advanced users can use a proper linter like link:"
+"https://github.com/dense-analysis/ale[Ale] which can also act as a Vim link:"
+"https://langserver.org/[Language Server Protocol] client."
 msgstr ""
 "Instale o package:editors/vim[] e em seguida siga as instruções em crossref"
-":editor-config[editor-config-vim-config]. Usuários mais avançados podem usar "
-"um linter mais adequado como o link:https://github.com/dense-analysis/"
-"ale[Ale] que também pode atuar como um link:https://langserver.org/["
-"Protocolo de Servidor de Idiomas] do Vim."
+":editor-config[editor-config-vim-config, Configuração]. Usuários mais "
+"avançados podem usar um linter mais adequado como o link:https://github.com/"
+"dense-analysis/ale[Ale] que também pode atuar como um link:https://langserver"
+".org/[Protocolo de Servidor de Idiomas] do Vim."
 
 #. type: Title ===
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:59
