--- a/documentation/content/pt-br/books/fdp-primer/translations/_index.po
+++ b/documentation/content/pt-br/books/fdp-primer/translations/_index.po
@@ -2,12 +2,13 @@
 # Copyright (C) YEAR The FreeBSD Project
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021, 2022.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:20-0300\n"
-"PO-Revision-Date: 2022-01-20 21:56+0000\n"
-"Last-Translator: Danilo G. Baio <dbaio@FreeBSD.org>\n"
+"POT-Creation-Date: 2024-12-29 08:29-0500\n"
+"PO-Revision-Date: 2024-12-29 21:29+0000\n"
+"Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/booksfdp-primertranslations_index/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -15,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.10.1\n"
+"X-Generator: Weblate 4.17\n"
 
 #. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:1
@@ -372,7 +373,7 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:154
 msgid ""
-"Hugo need the language codes in lowercase.  For example, instead of `pt_BR` "
+"Hugo needs the language codes in lowercase.  For example, instead of `pt_BR` "
 "Hugo uses `pt-br`."
 msgstr ""
 "Hugo precisa dos códigos de idioma em letras minúsculas. Por exemplo, em vez "
