pt-br/articles/cups: Sync with en f96f635
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/articles/cups/_index.adoc
+++ b/documentation/content/pt-br/articles/cups/_index.adoc
@@ -110,8 +110,8 @@ Uma vez que as alterações tenham sido feitas, os sistemas man:devfs[8] e CUPS 
 
 [source, shell]
 ....
-# /etc/rc.d/devfs restart
-# /usr/local/etc/rc.d/cupsd restart
+# service devfs restart
+# service cupsd restart
 ....
 
 [[printing-cups-configuring-printers]]
@@ -162,7 +162,7 @@ Versões do Windows(R) anteriores ao XP não tinham a capacidade de se conectar 
 http://server-name-or-ip:631/printers/printername
 ....
 
-Se você tiver uma versão mais antiga do Windows(R) sem suporte nativo de impressão IPP, o meio geral de conexão com uma impressora CUPS é usar o package:net/samba413[] e CUPS juntos, o que é um tópico fora do escopo deste capítulo.
+Se você tiver uma versão mais antiga do Windows(R) sem suporte nativo de impressão IPP, o meio geral de conexão com uma impressora CUPS é usar o package:net/samba416[] e CUPS juntos, o que é um tópico fora do escopo deste capítulo.
 
 [[printing-cups-troubleshooting]]
 == Resolução de Problemas do CUPS
