--- a/documentation/content/pt-br/articles/cups/_index.po
+++ b/documentation/content/pt-br/articles/cups/_index.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021, 2023.
 # Edson Brandi <ebrandi@freebsd.org>, 2023.
-# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-05-21 14:43-0300\n"
-"PO-Revision-Date: 2023-05-24 17:47+0000\n"
-"Last-Translator: Edson Brandi <ebrandi@freebsd.org>\n"
+"POT-Creation-Date: 2024-12-30 20:32-0300\n"
+"PO-Revision-Date: 2024-12-29 21:32+0000\n"
+"Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/articlescups_index/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -235,10 +235,13 @@ msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/cups/_index.adoc:121
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "# /etc/rc.d/devfs restart\n"
+#| "# /usr/local/etc/rc.d/cupsd restart\n"
 msgid ""
-"# /etc/rc.d/devfs restart\n"
-"# /usr/local/etc/rc.d/cupsd restart\n"
+"# service devfs restart\n"
+"# service cupsd restart\n"
 msgstr ""
 "# /etc/rc.d/devfs restart\n"
 "# /usr/local/etc/rc.d/cupsd restart\n"
@@ -437,12 +440,12 @@ msgstr ""
 msgid ""
 "If one has an older version of Windows(R) without native IPP printing "
 "support, then the general means of connecting to a CUPS printer is to use "
-"package:net/samba413[] and CUPS together, which is a topic outside the scope "
+"package:net/samba416[] and CUPS together, which is a topic outside the scope "
 "of this chapter."
 msgstr ""
 "Se você tiver uma versão mais antiga do Windows(R) sem suporte nativo de "
 "impressão IPP, o meio geral de conexão com uma impressora CUPS é usar o "
-"package:net/samba413[] e CUPS juntos, o que é um tópico fora do escopo deste "
+"package:net/samba416[] e CUPS juntos, o que é um tópico fora do escopo deste "
 "capítulo."
 
 #. type: Title ==
