pt-br/articles/explaining-bsd: Sync with en f96f635
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/articles/explaining-bsd/_index.adoc
+++ b/documentation/content/pt-br/articles/explaining-bsd/_index.adoc
@@ -6,7 +6,7 @@ authors:
 description: 'Breve explicação sobre BSD'
 tags: ["Explaining BSD", "BSD", "FreeBSD", "operating system"]
 title: 'Explicando o BSD'
-trademarks: ["freebsd", "amd", "apple", "intel", "linux", "opengroup", "sun", "unix", "general"]
+trademarks: ["freebsd", "amd", "apple", "git", intel", "linux", "opengroup", "sun", "unix", "general"]
 ---
 
 = Explicando o BSD
@@ -122,7 +122,7 @@ Esse arranjo difere do Linux de várias maneiras:
 . Ninguém controla o conteúdo do sistema. Na prática, essa diferença é superestimada, uma vez que o arquiteto principal pode exigir que o código seja removido ou substituído, e mesmo no projeto Linux, várias pessoas podem fazer alterações.
 . Por outro lado, _existe_ um repositório central, um lugar único no qual você pode encontrar todo o código fonte do sistema operacional, incluindo todas as versões mais antigas.
 . Os projetos BSDs mantêm todo o "Sistema Operacional", e não apenas o kernel. Essa distinção é apenas marginalmente útil: nem o BSD e nem o Linux são úteis sem aplicativos. Os aplicativos usados no BSD são frequentemente os mesmos aplicativos usados no Linux.
-. Como resultado da manutenção formal de um único repositório SVN com o código fonte, o desenvolvimento do BSD é claro e é possível acessar qualquer versão do sistema por número de release ou por data. O SVN também permite atualizações incrementais no sistema: por exemplo, o repositório do FreeBSD é atualizado cerca de 100 vezes por dia. A maioria dessas mudanças é pequena.
+. Como resultado da manutenção formal de um único repositório Git com o código fonte, o desenvolvimento do BSD é claro e é possível acessar qualquer versão do sistema por número de release ou por data. O Git também permite atualizações incrementais no sistema: por exemplo, o repositório do FreeBSD é atualizado cerca de 100 vezes por dia. A maioria dessas mudanças é pequena.
 
 === Releases do BSD
 
@@ -130,7 +130,7 @@ O FreeBSD, o NetBSD e o OpenBSD fornecem o sistema em três diferentes "releases
 
 . A versão de desenvolvimento do sistema é chamada de _CURRENT_. O FreeBSD atribui um número a CURRENT, por exemplo, FreeBSD 5.0-CURRENT. O NetBSD usa um esquema de nomenclatura ligeiramente diferente e acrescenta um sufixo de uma única letra que indica mudanças nas interfaces internas, por exemplo, o NetBSD 1.4.3G. O OpenBSD não atribui um número ("OpenBSD-current"). Todo novo desenvolvimento no sistema entra neste branch.
 . Em intervalos regulares, entre duas e quatro vezes por ano, os projetos lançam uma versão _RELEASE_ do sistema, a qual é disponibilizada por meio de CD-ROMs e por meio de download gratuito em sites FTP, por exemplo, OpenBSD 2.6-RELEASE ou NetBSD 1.4-RELEASE. A versão RELEASE destina-se a usuários finais e é a versão normal do sistema. O NetBSD também fornece _versões de correção_ (Patch Releases) com um terceiro dígito, por exemplo, o NetBSD 1.4.2.
-. A medida que os erros são encontrados em uma versão RELEASE, eles são corrigidos e as correções são adicionadas ao repositório SVN. No FreeBSD, a versão resultante é chamada de _STABLE_, enquanto no NetBSD e OpenBSD continua sendo chamada de versão RELEASE. Novos recursos menores também podem ser adicionados a essa branch após um período de teste na branch CURRENT. Patches de segurança e outras correções de bugs importantes também são aplicadas a todas as versões RELEASE suportadas.
+. A medida que os erros são encontrados em uma versão RELEASE, eles são corrigidos e as correções são adicionadas ao repositório Git. No FreeBSD, a versão resultante é chamada de _STABLE_, enquanto no NetBSD e OpenBSD continua sendo chamada de versão RELEASE. Novos recursos menores também podem ser adicionados a essa branch após um período de teste na branch CURRENT. Patches de segurança e outras correções de bugs importantes também são aplicadas a todas as versões RELEASE suportadas.
 
 _Por outro lado, o Linux mantém duas árvores de código separadas: a versão estável e a versão de desenvolvimento. Versões estáveis têm um número de versão menor par, como por exemplo 2.0, 2.2 ou 2.4. Versões de desenvolvimento têm um número de versão menor ímpar, como por exemplo 2.1, 2.3 ou 2.5. Em cada caso, o número é seguido por um outro número que designa a release exata. Além disso, cada fornecedor adiciona seus próprios programas e utilitários de área de usuário, portanto, o nome da distribuição também é importante. Cada fornecedor de distribuição também atribui números de versão à distribuição, portanto, uma descrição completa seria algo como "TurboLinux 6.0 com kernel 2.2.14 "._
 
@@ -175,6 +175,6 @@ Esta é uma pergunta muito difícil de responder. Aqui estão algumas diretrizes
 
 === Quem fornece suporte, serviços e treinamento para o BSD?
 
-A BSDi / http://www.freebsdmall.com[FreeBSD Mall, Inc.] fornece contratos de suporte para o FreeBSD já há quase uma década.
+http://www.ixsystems.com/[iXsystems, Inc.] fornece contratos de suporte para FreeBSD.
 
 Além disso, o website de cada um dos projetos possui uma lista de consultores disponíveis para contratação: link:www.FreeBSD.org/commercial/consult_bycat/[FreeBSD], http://www.netbsd.org/gallery/consultants.html[NetBSD], e http://www.openbsd.org/support.html[OpenBSD].
