--- a/documentation/content/pt-br/articles/explaining-bsd/_index.po
+++ b/documentation/content/pt-br/articles/explaining-bsd/_index.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021.
 # Edson Brandi <ebrandi@freebsd.org>, 2023.
-# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-05-21 14:43-0300\n"
-"PO-Revision-Date: 2023-05-25 18:55+0000\n"
-"Last-Translator: Edson Brandi <ebrandi@freebsd.org>\n"
+"POT-Creation-Date: 2023-09-09 18:13-0300\n"
+"PO-Revision-Date: 2024-12-29 21:34+0000\n"
+"Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/articlesexplaining-bsd_index/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -468,7 +468,7 @@ msgid ""
 "obtaining consensus.  For example, a documentation project committer may "
 "correct typographical or grammatical errors without review.  On the other "
 "hand, developers making far-reaching or complicated changes are expected to "
-"submit their changes for review before committing them In extreme cases, a "
+"submit their changes for review before committing them.  In extreme cases, a "
 "core team member with a function such as Principal Architect may order that "
 "changes be removed from the tree, a process known as _backing out_.  All "
 "committers receive mail describing each individual commit, so it is not "
@@ -550,15 +550,15 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/explaining-bsd/_index.adoc:165
 msgid ""
-"As a result of the formalized maintenance of a single SVN source tree, BSD "
+"As a result of the formalized maintenance of a single Git source tree, BSD "
 "development is clear, and it is possible to access any version of the system "
-"by release number or by date. SVN also allows incremental updates to the "
+"by release number or by date. Git also allows incremental updates to the "
 "system: for example, the FreeBSD repository is updated about 100 times a "
 "day. Most of these changes are small."
 msgstr ""
-"Como resultado da manutenção formal de um único repositório SVN com o código "
+"Como resultado da manutenção formal de um único repositório Git com o código "
 "fonte, o desenvolvimento do BSD é claro e é possível acessar qualquer versão "
-"do sistema por número de release ou por data. O SVN também permite "
+"do sistema por número de release ou por data. O Git também permite "
 "atualizações incrementais no sistema: por exemplo, o repositório do FreeBSD "
 "é atualizado cerca de 100 vezes por dia. A maioria dessas mudanças é pequena."
 
@@ -618,14 +618,14 @@ msgstr ""
 #: documentation/content/en/articles/explaining-bsd/_index.adoc:175
 msgid ""
 "As bugs are found in a RELEASE version, they are fixed, and the fixes are "
-"added to the SVN tree. In FreeBSD, the resultant version is called the "
+"added to the Git tree. In FreeBSD, the resultant version is called the "
 "_STABLE_ version, while in NetBSD and OpenBSD it continues to be called the "
 "RELEASE version. Smaller new features can also be added to this branch after "
 "a period of test in the CURRENT branch. Security and other important bug "
 "fixes are also applied to all supported RELEASE versions."
 msgstr ""
 "A medida que os erros são encontrados em uma versão RELEASE, eles são "
-"corrigidos e as correções são adicionadas ao repositório SVN. No FreeBSD, a "
+"corrigidos e as correções são adicionadas ao repositório Git. No FreeBSD, a "
 "versão resultante é chamada de _STABLE_, enquanto no NetBSD e OpenBSD "
 "continua sendo chamada de versão RELEASE. Novos recursos menores também "
 "podem ser adicionados a essa branch após um período de teste na branch "
@@ -954,11 +954,11 @@ msgstr "Quem fornece suporte, serviços e treinamento para o BSD?"
 #. type: Plain text
 #: documentation/content/en/articles/explaining-bsd/_index.adoc:232
 msgid ""
-"BSDi / http://www.freebsdmall.com[FreeBSD Mall, Inc.] have been providing "
-"support contracts for FreeBSD for nearly a decade."
+"http://www.ixsystems.com/[iXsystems, Inc.] provides support contracts for "
+"FreeBSD."
 msgstr ""
-"A BSDi / http://www.freebsdmall.com[FreeBSD Mall, Inc.] fornece contratos de "
-"suporte para o FreeBSD já há quase uma década."
+"http://www.ixsystems.com/[iXsystems, Inc.] fornece contratos de suporte para "
+"FreeBSD."
 
 #. type: Plain text
 #: documentation/content/en/articles/explaining-bsd/_index.adoc:233
