pt-br/articles/freebsd-questions: Sync with en f96f635
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/articles/freebsd-questions/_index.adoc
+++ b/documentation/content/pt-br/articles/freebsd-questions/_index.adoc
@@ -95,7 +95,7 @@ Antes de fazer uma pergunta em uma das listas de discussão, você pode (e deve)
 
 * Tente resolver o problema por conta própria. Se você postar uma pergunta que mostre que você tentou resolver o problema, sua pergunta geralmente atrairá mais atenção positiva das pessoas que a lerem. Tentar resolver o problema por si só também aumentará sua compreensão do FreeBSD e eventualmente permitirá que você use seu conhecimento para ajudar os outros, respondendo perguntas postadas nas listas de discussão.
 * Leia as páginas do manual e a documentação do FreeBSD (instaladas em [.filename]#/usr/doc# ou acessíveis via WWW em http://www.FreeBSD.org[http://www.FreeBSD.org]), especialmente o extref:{handbook}[Handbook] e o extref:{faq}[FAQ].
-* Pesquise nos arquivos da lista de discussão para ver se sua pergunta ou uma semelhante já foi feita (e possivelmente respondida) na lista. Você pode navegar e/ou pesquisar os arquivos da lista de discussão em https://www.FreeBSD.org/mail[https://www.FreeBSD.org/mail] e https://www.FreeBSD.org/search/#mailinglists[https://www.FreeBSD.org/search/#mailinglists], respectivamente. Isso também pode ser feito em outros sites da WWW, por exemplo, em http://marc.theaimsgroup.com[http://marc.theaimsgroup.com].
+* Pesquise nos arquivos da lista de discussão para ver se sua pergunta ou uma semelhante já foi feita (e possivelmente respondida) na lista. Você pode navegar e/ou pesquisar os arquivos da lista de discussão em https://www.FreeBSD.org/mail[https://www.FreeBSD.org/mail] e https://www.FreeBSD.org/search/#mailinglists[https://www.FreeBSD.org/search/#mailinglists], respectivamente.
 * Use um mecanismo de pesquisa, como o http://www.google.com[Google] ou http://www.yahoo.com[Yahoo], para encontrar respostas para sua pergunta.
 
 == Como Enviar uma Pergunta
