--- a/documentation/content/pt-br/articles/freebsd-questions/_index.po
+++ b/documentation/content/pt-br/articles/freebsd-questions/_index.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021.
 # Edson Brandi <ebrandi@freebsd.org>, 2023.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:21-0300\n"
-"PO-Revision-Date: 2023-04-24 18:31+0000\n"
-"Last-Translator: Edson Brandi <ebrandi@freebsd.org>\n"
+"POT-Creation-Date: 2023-09-09 18:13-0300\n"
+"PO-Revision-Date: 2024-12-29 21:36+0000\n"
+"Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/articlesfreebsd-questions_index/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -23,8 +24,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:11
 #, no-wrap
 msgid "How to get Best Results from the FreeBSD-questions Mailing List"
-msgstr ""
-"Como obter os melhores resultados da lista de discussão FreeBSD-questions"
+msgstr "Como obter os melhores resultados da lista de discussão FreeBSD-questions"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:44
@@ -151,9 +151,9 @@ msgid ""
 msgstr ""
 "A FreeBSD-questions é uma lista de discussão, portanto, você precisa de "
 "acesso a uma conta de e-mail. Aponte seu navegador WWW para {freebsd-"
-"questions}. Na seção intitulada \"Inscreva-se ou cancele a inscrição on-"
-"line\", preencha o campo \"Seu endereço de e-mail\" e clique em \"Inscrever-"
-"se\". Ou envie um e-mail para freebsd-questions+subscribe@freebsd.org."
+"questions}. Na seção intitulada \"Inscreva-se ou cancele a inscrição on-line"
+"\", preencha o campo \"Seu endereço de e-mail\" e clique em \"Inscrever-se"
+"\". Ou envie um e-mail para freebsd-questions+subscribe@freebsd.org."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:84
@@ -260,10 +260,10 @@ msgid ""
 "criteria above still apply, and it is in your interest to stick to them, "
 "since you are more likely to get good results that way."
 msgstr ""
-"Existem também várias outras listas de discussão extref:{handbook}["
-"especializadas, eresources-mail], que atendem a interesses mais específicos. "
-"Os critérios acima ainda se aplicam, e é do seu interesse segui-los, já que "
-"é mais provável que você obtenha bons resultados dessa maneira."
+"Existem também várias outras listas de discussão extref:{handbook}"
+"[especializadas, eresources-mail], que atendem a interesses mais "
+"específicos. Os critérios acima ainda se aplicam, e é do seu interesse segui-"
+"los, já que é mais provável que você obtenha bons resultados dessa maneira."
 
 #. type: Title ==
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:107
@@ -306,9 +306,9 @@ msgid ""
 "{faq}[FAQ]."
 msgstr ""
 "Leia as páginas do manual e a documentação do FreeBSD (instaladas em [."
-"filename]#/usr/doc# ou acessíveis via WWW em http://www.FreeBSD."
-"org[http://www.FreeBSD.org]), especialmente o extref:{handbook}[Handbook] e "
-"o extref:{faq}[FAQ]."
+"filename]#/usr/doc# ou acessíveis via WWW em http://www.FreeBSD.org[http://"
+"www.FreeBSD.org]), especialmente o extref:{handbook}[Handbook] e o extref:"
+"{faq}[FAQ]."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:114
@@ -318,16 +318,14 @@ msgid ""
 "list. You can browse and/or search the mailing list archives at https://www."
 "FreeBSD.org/mail[https://www.FreeBSD.org/mail] and https://www.FreeBSD.org/"
 "search/#mailinglists[https://www.FreeBSD.org/search/#mailinglists] "
-"respectively. This can be done at other WWW sites as well, for example at "
-"http://marc.theaimsgroup.com[http://marc.theaimsgroup.com]."
+"respectively."
 msgstr ""
 "Pesquise nos arquivos da lista de discussão para ver se sua pergunta ou uma "
 "semelhante já foi feita (e possivelmente respondida) na lista. Você pode "
 "navegar e/ou pesquisar os arquivos da lista de discussão em https://www."
 "FreeBSD.org/mail[https://www.FreeBSD.org/mail] e https://www.FreeBSD.org/"
 "search/#mailinglists[https://www.FreeBSD.org/search/#mailinglists], "
-"respectivamente. Isso também pode ser feito em outros sites da WWW, por "
-"exemplo, em http://marc.theaimsgroup.com[http://marc.theaimsgroup.com]."
+"respectivamente."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:115
@@ -335,8 +333,8 @@ msgid ""
 "Use a search engine such as http://www.google.com[Google] or http://www."
 "yahoo.com[Yahoo] to find answers to your question."
 msgstr ""
-"Use um mecanismo de pesquisa, como o http://www.google.com[Google] ou "
-"http://www.yahoo.com[Yahoo], para encontrar respostas para sua pergunta."
+"Use um mecanismo de pesquisa, como o http://www.google.com[Google] ou http://"
+"www.yahoo.com[Yahoo], para encontrar respostas para sua pergunta."
 
 #. type: Title ==
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:116
@@ -533,9 +531,9 @@ msgid ""
 "dmesg[8] command can frequently be very useful, since it tells not just what "
 "hardware you are running, but what version of FreeBSD as well."
 msgstr ""
-"Há um julgamento envolvido aqui, é claro, mas a saída do comando man:dmesg[8]"
-" frequentemente pode ser muito útil, pois não apenas informa qual hardware "
-"você está usando, mas também qual versão do FreeBSD."
+"Há um julgamento envolvido aqui, é claro, mas a saída do comando man:"
+"dmesg[8] frequentemente pode ser muito útil, pois não apenas informa qual "
+"hardware você está usando, mas também qual versão do FreeBSD."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:144
@@ -597,8 +595,8 @@ msgstr ""
 "digitando-a novamente; isso é realmente difícil e você provavelmente "
 "cometerá um erro. Para enviar o conteúdo do arquivo de log, faça uma cópia "
 "do arquivo e use um editor para selecionar apenas as informações relevantes, "
-"ou copie e cole na sua mensagem. Para a saída de programas como o "
-"man:dmesg[8], redirecione a saída para um arquivo e inclua esse arquivo. Por "
+"ou copie e cole na sua mensagem. Para a saída de programas como o man:"
+"dmesg[8], redirecione a saída para um arquivo e inclua esse arquivo. Por "
 "exemplo,"
 
 #. type: delimited block . 4
@@ -689,12 +687,9 @@ msgid ""
 "Missing Operating System.\n"
 msgstr ""
 "Acabei de receber o CD-ROM do FreeBSD 2.1.5 da Walnut Creek e estou tendo \n"
-"muita dificuldade para instalá-lo. Tenho um 486 de 66 MHz com 16 MB de "
-"memória \n"
-"e uma placa SCSI Adaptec 1540A, um disco Quantum Fireball de 1,2 GB e uma "
-"unidade \n"
-"de CD-ROM Toshiba 3501XA. A instalação funciona muito bem, mas quando tento "
-"reiniciar \n"
+"muita dificuldade para instalá-lo. Tenho um 486 de 66 MHz com 16 MB de memória \n"
+"e uma placa SCSI Adaptec 1540A, um disco Quantum Fireball de 1,2 GB e uma unidade \n"
+"de CD-ROM Toshiba 3501XA. A instalação funciona muito bem, mas quando tento reiniciar \n"
 "o sistema, recebo a mensagem \"Sistema Operacional Ausente\".\n"
 
 #. type: Title ==
@@ -915,10 +910,10 @@ msgid ""
 msgstr ""
 "Se o autor da pergunta não seguir as convenções de formato (linhas muito "
 "longas, assunto inapropriado), _por favor_ corrija-o. No caso de uma linha "
-"de assunto incorreta (como \"AJUDA!!??\"), altere a linha de assunto para ("
-"por exemplo) \"Re: Dificuldades com PPP de sincronização (era: AJUDA!!??)\". "
-"Dessa forma, outras pessoas que tentam seguir a discussão terão menos "
-"dificuldade em acompanhá-la."
+"de assunto incorreta (como \"AJUDA!!??\"), altere a linha de assunto para "
+"(por exemplo) \"Re: Dificuldades com PPP de sincronização (era: "
+"AJUDA!!??)\". Dessa forma, outras pessoas que tentam seguir a discussão "
+"terão menos dificuldade em acompanhá-la."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:221
